--- a/Angular12/src/app/dashboard/components/wrapper/wrapper.component.scss
+++ b/Angular12/src/app/dashboard/components/wrapper/wrapper.component.scss
@@ -1,17 +1,253 @@
-mat-sidenav-container {
-    height: 100vh;
+$img-edge-width: 2.8125rem;
+$logo-content-height: 3.125rem;
+$list-item-height: 3.125rem;
+$sidebar-default-width: 4.875rem;
+$sidebar-active-width: 15rem;
+$top-nav-height: 3.75rem;
 
-    mat-sidenav {
-        mat-nav-list {
-            .chevron-button {
-                transition: 0.3s ease-in-out;
-                transform: rotate(0deg);
-                right: 0;
-                float: right;
-                position: absolute;
+$ease-5minisecond: all 0.5s ease;
+$ease-4minisecond: all 0.4s ease;
+
+kcl-sidenav {
+    &.kcl-sidenav-expand {
+        position: fixed;
+        top: $top-nav-height;
+        left: 0;
+        background: #11101d;
+        height: calc(100% - #{$top-nav-height});
+        width: $sidebar-default-width;
+        padding: 0.375rem 0.875rem;
+        transition: $ease-5minisecond;
+
+        &.active {
+            width: $sidebar-active-width;
+
+            kcl-sidenav-logo {
+                .logo-content {
+                    .logo {
+                        opacity: 1;
+                    }
+                }
+
+                #kcl-expand-btn {
+                    left: 90%;
+                }
             }
-            .chevron-button.rotated {
-                transform: rotate(180deg);
+
+            kcl-sidenav-list {
+                ul {
+                    li {
+                        .link-name {
+                            opacity: 1;
+                            pointer-events: auto;
+                        }
+
+                        .tooltip {
+                            display: none;
+                        }
+                    }
+                }
+            }
+
+            kcl-sidenav-profile {
+                .profile-content {
+                    .profile {
+                        background: #1d1b31;
+
+                        .profile-details {
+                            opacity: 1;
+                            pointer-events: auto;
+                        }
+
+                        #logout {
+                            left: 88%;
+                            background: none;
+                        }
+                    }
+                }
+            }
+        }
+
+        kcl-sidenav-profile {
+            .profile-content {
+                position: absolute;
+                color: #fff;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+
+                .profile {
+                    position: relative;
+                    padding: 0.625rem 0.375rem;
+                    height: 3.75rem;
+                    background: none;
+                    transition: $ease-4minisecond;
+
+                    .profile-details {
+                        display: flex;
+                        align-items: center;
+                        opacity: 0;
+                        pointer-events: none;
+                        white-space: nowrap;
+
+                        img {
+                            height: $img-edge-width;
+                            width: $img-edge-width;
+                            object-fit: cover;
+                            border-radius: 0.75rem;
+                        }
+
+                        .name-job {
+                            margin-left: 10px;
+
+                            .name {
+                                font-size: 15px;
+                                font-weight: 400;
+                            }
+
+                            .job {
+                                font-size: 0.75rem;
+                            }
+                        }
+                    }
+                    
+                    mat-icon {
+                        &#logout {
+                            position: absolute;
+                            left: 50%;
+                            bottom: 0.3125rem;
+                            transform: translateX(-50%);
+                            min-width: 3.125rem;
+                            height: 3.125rem;
+                            line-height: 3.125rem;
+                            text-align: center;
+                            transition: $ease-4minisecond;
+                            background: #1d1b31;
+                            font-size: 20px;
+                            border-radius: 0.75rem;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    kcl-sidenav-logo {
+        .logo-content {
+            .logo {
+                color: #fff;
+                display: flex;
+                height: $logo-content-height;
+                width: 100%;
+                align-items: center;
+                opacity: 0;
+                pointer-events: none;
+                transition: $ease-5minisecond;
+
+                i {
+                    font-size: 1.75rem;
+                    margin-right: 0.3125rem;
+                }
+
+                .logo-name {
+                    font-size: 1.25rem;
+                    font-weight: 400;
+                }
+            }
+        }
+
+        #kcl-expand-btn {
+            position: absolute;
+            color: #fff;
+            top: 0.375rem;
+            left: 50%;
+            font-size: 1.25rem;
+            height: $logo-content-height;
+            width: 3.125rem;
+            text-align: center;
+            line-height: $logo-content-height;
+            transform: translateX(-50%);
+
+            mat-icon {
+                line-height: $logo-content-height;
+            }
+        }
+    }
+
+    kcl-sidenav-list {
+        ul {
+            margin-top: 1.25rem;
+
+            li {
+                position: relative;
+                height: $list-item-height;
+                width: 100%;
+                margin: 0 0.3125rem;
+                list-style: none;
+                line-height: $list-item-height;
+
+                &:hover {
+                    .tooltip {
+                        transition: $ease-5minisecond;
+                        opacity: 1;
+                        top: 50%;
+                    }
+                }
+
+                a {
+                    color: #fff;
+                    display: flex;
+                    align-items: center;
+                    text-decoration: none;
+                    transition: $ease-4minisecond;
+                    border-radius: 0.75rem;
+                    white-space: nowrap;
+
+                    &:hover {
+                        color: #11101d;
+                        background: #fff;
+                    }
+                }
+
+                .link-name {
+                    opacity: 0;
+                    pointer-events: none;
+                    transition: $ease-5minisecond;
+                }
+
+                i {
+                    height: $list-item-height;
+                    min-width: $list-item-height;
+                    line-height: $list-item-height !important;
+                    text-align: center;
+                    border-radius: 0.75rem;
+                }
+
+                mat-icon {
+                    height: $list-item-height;
+                    min-width: $list-item-height;
+                    border-radius: 0.75rem;
+                    line-height: $list-item-height;
+                    text-align: center;
+                }
+
+                .tooltip {
+                    position: absolute;
+                    top: 0;
+                    left: 7.625rem;
+                    transform: translate(-50%, -50%);
+                    border-radius: 0.375rem;
+                    height: 2.1875rem;
+                    width: 7.625rem;
+                    background: #fff;
+                    line-height: 2.1875rem;
+                    text-align: center;
+                    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+                    transition: 0s;
+                    opacity: 0;
+                    pointer-events: none;
+                    display: block;
+                }
             }
         }
     }
