--- a/Angular12/src/styles.scss
+++ b/Angular12/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @use '@angular/material' as mat;
 
-@use './app/dashboard/components/wrapper/wrapper.component.scss';
+//@use './app/dashboard/components/wrapper/wrapper.component.scss';
 
 @include mat.core();
 
