--- a/Angular12/src/app/dashboard/components/wrapper/wrapper.component.scss
+++ b/Angular12/src/app/dashboard/components/wrapper/wrapper.component.scss
@@ -1,254 +1,300 @@
+// @use '../../library/sidenav/sidenav.scss';
+@use '../../library/tooltip/tooltip.component.scss';
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 $img-edge-width: 2.8125rem;
-$logo-content-height: 3.125rem;
 $list-item-height: 3.125rem;
-$sidebar-default-width: 4.875rem;
-$sidebar-active-width: 15rem;
-$top-nav-height: 3.75rem;
+$logo-content-height: 3.75rem;
+$profile-content-height: 3.75rem;
+$sidebar-expand-width: 16.25rem;
+$sidebar-shrink-width: 4.875rem;
 
-$ease-5minisecond: all 0.5s ease;
-$ease-4minisecond: all 0.4s ease;
+$ease-5minisecond-all: all 0.5s ease;
+$ease-5minisecond: 0.5s ease;
+$ease-4minisecond-all: all 0.4s ease;
+$ease-4minisecond: 0.4s ease;
+$ease-3minisecond-all: all 0.3s ease;
+$ease-3minisecond: 0.3s ease;
 
-kcl-sidenav {
-    &.kcl-sidenav-expand {
-        position: fixed;
-        top: $top-nav-height;
-        left: 0;
-        background: #11101d;
-        height: calc(100% - #{$top-nav-height});
-        width: $sidebar-default-width;
-        padding: 0.375rem 0.875rem;
-        transition: $ease-5minisecond;
+$section-background: #ded9f3;
+// $section-background: #FFF;
 
-        &.active {
-            width: $sidebar-active-width;
+@mixin opacity-event-none {
+    opacity: 0;
+    pointer-events: none;
+}
 
-            kcl-sidenav-logo {
-                .logo-content {
-                    .logo {
-                        opacity: 1;
-                    }
-                }
+@mixin icon-common {
+    height: 3.125rem;
+    min-width: calc(#{$sidebar-expand-width} * 3 / 10);
+    text-align: center;
+    line-height: 3.125rem;
+}
 
-                #kcl-expand-btn {
-                    left: 90%;
-                }
-            }
-
-            kcl-sidenav-list {
-                ul {
-                    li {
-                        .link-name {
-                            opacity: 1;
-                            pointer-events: auto;
-                        }
-
-                        .tooltip {
-                            display: none;
-                        }
-                    }
-                }
-            }
-
-            kcl-sidenav-profile {
-                .profile-content {
-                    .profile {
-                        background: #1d1b31;
-
-                        .profile-details {
-                            opacity: 1;
-                            pointer-events: auto;
-                        }
-
-                        #logout {
-                            left: 88%;
-                            background: none;
-                        }
-                    }
-                }
-            }
-        }
-
-        kcl-sidenav-profile {
-            .profile-content {
-                position: absolute;
-                color: #fff;
-                bottom: 0;
-                left: 0;
-                width: 100%;
-
-                .profile {
-                    position: relative;
-                    padding: 0.625rem 0.375rem;
-                    height: 3.75rem;
-                    background: none;
-                    transition: $ease-4minisecond;
-
-                    .profile-details {
-                        display: flex;
-                        align-items: center;
-                        opacity: 0;
-                        pointer-events: none;
-                        white-space: nowrap;
-
-                        img {
-                            height: $img-edge-width;
-                            width: $img-edge-width;
-                            object-fit: cover;
-                            border-radius: 0.75rem;
-                        }
-
-                        .name-job {
-                            margin-left: 10px;
-
-                            .name {
-                                font-size: 15px;
-                                font-weight: 400;
-                            }
-
-                            .job {
-                                font-size: 0.75rem;
-                            }
-                        }
-                    }
-                    
-                    mat-icon {
-                        &#logout {
-                            position: absolute;
-                            left: 50%;
-                            bottom: 0.3125rem;
-                            transform: translateX(-50%);
-                            min-width: 3.125rem;
-                            height: 3.125rem;
-                            line-height: 3.125rem;
-                            text-align: center;
-                            transition: $ease-4minisecond;
-                            background: #1d1b31;
-                            font-size: 20px;
-                            border-radius: 0.75rem;
-                        }
-                    }
-                }
-            }
-        }
+@mixin active-navlink-corners(
+    $edge-length,
+    $use-top: false,
+    $use-bottom: false,
+    $vertical-position,
+    $shadow-background
+) {
+    content: "";
+    position: absolute;
+    background: transparent;
+    @if $use-top {
+        top: $vertical-position;
+        border-top-right-radius: 50%;
+        box-shadow: 0 calc(-#{$edge-length} / 2) 0 0 $shadow-background;
     }
-
-    kcl-sidenav-logo {
-        .logo-content {
-            .logo {
-                color: #fff;
-                display: flex;
-                height: $logo-content-height;
-                width: 100%;
-                align-items: center;
-                opacity: 0;
-                pointer-events: none;
-                transition: $ease-5minisecond;
-
-                i {
-                    font-size: 1.75rem;
-                    margin-right: 0.3125rem;
-                }
-
-                .logo-name {
-                    font-size: 1.25rem;
-                    font-weight: 400;
-                }
-            }
-        }
-
-        #kcl-expand-btn {
-            position: absolute;
-            color: #fff;
-            top: 0.375rem;
-            left: 50%;
-            font-size: 1.25rem;
-            height: $logo-content-height;
-            width: 3.125rem;
-            text-align: center;
-            line-height: $logo-content-height;
-            transform: translateX(-50%);
-
-            mat-icon {
-                line-height: $logo-content-height;
-            }
-        }
+    @if $use-bottom {
+        bottom: $vertical-position;
+        border-bottom-right-radius: 50%;
+        box-shadow: 0 calc(#{$edge-length} / 2) 0 0 $shadow-background;
     }
+    right: 0;
+    height: $edge-length;
+    width: $edge-length;
+}
 
-    kcl-sidenav-list {
-        ul {
-            margin-top: 1.25rem;
+.kcl-sidenav-expand {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: $sidebar-expand-width;
+    background: #11101d;
+    z-index: 100;
+    transition: $ease-5minisecond-all;
 
+    &.close {
+        width: calc(#{$sidebar-expand-width} * 3 / 10);
+
+        .logo-details {
+            .logo-name {
+                transition-delay: 0s;
+                @include opacity-event-none;
+            }
+        }
+
+        .nav-links {
+            // overflow: visible;
             li {
-                position: relative;
-                height: $list-item-height;
-                width: 100%;
-                margin: 0 0.3125rem;
-                list-style: none;
-                line-height: $list-item-height;
-
-                &:hover {
-                    .tooltip {
-                        transition: $ease-5minisecond;
-                        opacity: 1;
-                        top: 50%;
+                a {
+                    .link-name {
+                        @include opacity-event-none;
                     }
                 }
+            }
+        }
 
-                a {
-                    color: #fff;
-                    display: flex;
-                    align-items: center;
-                    text-decoration: none;
-                    transition: $ease-4minisecond;
-                    border-radius: 0.75rem;
-                    white-space: nowrap;
+        .profile-content {
+            .profile {
+                background: none;
 
-                    &:hover {
+                .profile-details {
+                    @include opacity-event-none;
+                }
+
+                i,
+                mat-icon {
+                    &#log_out {
+                        left: 50%;
+                        background: #1d1b31;
+                    }
+                }
+            }
+        }
+
+        & ~ .kcl-sidenav-content {
+            .home-section {
+                left: $sidebar-shrink-width;
+                width: calc(100% - #{$sidebar-shrink-width});
+            }
+        }
+    }
+
+    .logo-details {
+        height: $logo-content-height;
+        width: 100%;
+        display: flex;
+        align-items: center;
+
+        i,
+        mat-icon {
+            color: #fff;
+            font-size: 1.875rem;
+            @include icon-common;
+        }
+
+        .logo-name {
+            color: #fff;
+            font-size: 1.375rem;
+            font-weight: 600;
+            transition: $ease-3minisecond;
+            transition-delay: 0.1s;
+        }
+    }
+
+    .nav-links {
+        // height: 100%;
+        // padding: 1.875rem 0 9.375rem 0;
+        height: calc(100% - calc(#{$logo-content-height} + #{$profile-content-height}));
+        padding: 1.875rem 0 0 0;
+        overflow: auto;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
+
+        li {
+            position: relative;
+            list-style: none;
+            transition: $ease-4minisecond-all;
+            &:hover {
+                background: #1d1b31;
+            }
+
+            i,
+            mat-icon {
+                @include icon-common;
+                color: #fff;
+                font-size: 1.25rem;
+                cursor: pointer;
+                transition: $ease-3minisecond-all;
+            }
+
+            a {
+                display: flex;
+                align-items: center;
+                text-decoration: none;
+
+                &.sidnav-link-active {
+                    // background: #343152;
+                    background: $section-background;
+                    border-top-left-radius: calc(1.25rem / 2);
+                    border-bottom-left-radius: calc(1.25rem / 2);
+
+                    &::after {
+                        @include active-navlink-corners(1.25rem, false, true, 100%, $section-background);
+                    }
+
+                    &::before {
+                        @include active-navlink-corners(1.25rem, true, false, 100%, $section-background);
+                        z-index: 1;
+                    }
+
+                    i,
+                    mat-icon,
+                    .link-name {
                         color: #11101d;
-                        background: #fff;
                     }
                 }
 
                 .link-name {
-                    opacity: 0;
-                    pointer-events: none;
-                    transition: $ease-5minisecond;
-                }
-
-                i {
-                    height: $list-item-height;
-                    min-width: $list-item-height;
-                    line-height: $list-item-height !important;
-                    text-align: center;
-                    border-radius: 0.75rem;
-                }
-
-                mat-icon {
-                    height: $list-item-height;
-                    min-width: $list-item-height;
-                    border-radius: 0.75rem;
-                    line-height: $list-item-height;
-                    text-align: center;
-                }
-
-                .tooltip {
-                    position: absolute;
-                    top: 0;
-                    left: 7.625rem;
-                    transform: translate(-50%, -50%);
-                    border-radius: 0.375rem;
-                    height: 2.1875rem;
-                    width: 7.625rem;
-                    background: #fff;
-                    line-height: 2.1875rem;
-                    text-align: center;
-                    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-                    transition: 0s;
-                    opacity: 0;
-                    pointer-events: none;
-                    display: block;
+                    font-size: 1.125rem;
+                    font-weight: 400;
+                    color: #fff;
+                    white-space: nowrap;
+                    width: 100%;
                 }
             }
+        }
+    }
+
+    .profile-content {
+        position: absolute;
+        color: #fff;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+
+        .profile {
+            position: relative;
+            padding: 0.625rem 0.375rem;
+            height: $profile-content-height;
+            background: #1d1b31;
+            transition: $ease-4minisecond-all;
+
+            .profile-details {
+                display: flex;
+                align-items: center;
+                opacity: 1;
+                pointer-events: auto;
+                white-space: nowrap;
+
+                img {
+                    height: $img-edge-width;
+                    width: $img-edge-width;
+                    object-fit: cover;
+                    border-radius: 0.75rem;
+                }
+
+                .name-job {
+                    margin-left: 0.625rem;
+
+                    .name {
+                        font-size: 0.9375rem;
+                        font-weight: 400;
+                    }
+
+                    .job {
+                        font-size: 0.75rem;
+                    }
+                }
+            }
+
+            i,
+            mat-icon {
+                &#log_out {
+                    position: absolute;
+                    left: 88%;
+                    bottom: 0.3125rem;
+                    transform: translateX(-50%);
+                    min-width: 3.125rem;
+                    height: 3.125rem;
+                    line-height: 3.125rem;
+                    font-size: 1.25rem;
+                    border-radius: 0.75rem;
+                    text-align: center;
+                    background: none;
+                }
+            }
+        }
+    }
+}
+
+.kcl-sidenav-content {
+    .home-section {
+        position: relative;
+        display: flex;
+        background: $section-background;
+        height: 100vh;
+        width: calc(100% - #{$sidebar-expand-width});
+        left: $sidebar-expand-width;
+        transition: $ease-5minisecond-all;
+
+        .home-content {
+            display: flex;
+
+            i#sidenav_menu {
+                font-size: 35px;
+            }
+        }
+    }
+}
+
+.mat-sidenav-container {
+    .mat-sidenav.sidebar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: $sidebar-expand-width;
+        background: #11101d;
+        z-index: 100;
+        transition: $ease-5minisecond-all;
+
+        &.close {
+            width: $sidebar-shrink-width;
         }
     }
 }
